--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <li><a href="#">Terms &amp; Conditions</a></li>
         </ul>
       </div>
-      <div>
+      <div class="social">
         <div class="text-primary link-header">Follow Us</div>
         <ul>
           <li><a class="twitter" href="#"></a></li>
@@ -174,13 +174,13 @@
 
     <!-- PS DEMO -->
     <section class="ps">
-      <div class="flex flex-column align-center demo">
+      <div class="flex flex-column align-center">
         <img src="img/pluralsight-white.png" />
-        <div>This site is created for demonstrative purposes only and does not offer any real products or services.</div>
+        <div class="demo">This site is created for demonstrative purposes only and does not offer any real products or services.</div>
       </div>
     </section>
 
-    <div class="text-primary social copyright">&copy;Pluralsight 2018</div>
+    <div class="text-primary social copyright ">&copy;Pluralsight 2018</div>
   </footer>
 </body>
 </html>
